--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/bikingbadger/gws#readme",
   "devDependencies": {
     "netlify-lambda": "^1.6.3"
+  },
+  "dependencies": {
+    "faunadb": "^2.13.1"
   }
 }
