Create vue application for front end

--- a/package.json
+++ b/package.json
@@ -1,28 +1,62 @@
 {
   "name": "gws",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "index.js",
+  "author": {
+    "name": "Hilton Meyer"
+  },
   "scripts": {
-    "serve": "netlify-lambda serve src/functions",
-    "build": "netlify-lambda build src/functions"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bikingbadger/gws.git"
+  "main": "index.js",
+  "dependencies": {
+    "core-js": "^3.6.4",
+    "dot-env": "0.0.1",
+    "encoding": "^0.1.12",
+    "faunadb": "^2.13.1",
+    "vue": "^2.6.11"
   },
-  "author": "Hilton Meyer",
-  "license": "MIT",
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "netlify-lambda": "^1.6.3",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "_id": "gws@1.0.0",
   "bugs": {
     "url": "https://github.com/bikingbadger/gws/issues"
   },
   "homepage": "https://github.com/bikingbadger/gws#readme",
-  "devDependencies": {
-    "netlify-lambda": "^1.6.3"
-  },
-  "dependencies": {
-    "dot-env": "0.0.1",
-    "encoding": "^0.1.12",
-    "faunadb": "^2.13.1"
+  "license": "MIT",
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bikingbadger/gws.git"
   }
 }
